Added a basic page and the testing layout.
- Basic Page
  - Host page shows a list of current loaded hosts.
  - Controller adds some class mappings.
  - Test ensures scope's behavior.
- Basic Service
  - Deployman service manages a list of hosts.
  - Test checks for loaded data.
- Basic Context
  - Also includes Routers, but we'll need them soon enough.
- Grunt builds appropriate script.ls and test.ls files.
- test folder contains lib code, configs, and mocks.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "devDependencies": {
     "grunt-contrib": "*",
-    "grunt-livescript": "*"
+    "grunt-livescript": "*",
+    "grunt-testacular": "*"
   },
   "keywords": []
 }
