Adding behaviors to the Hosts view, which requires e2e tests.
- Moved to Grunt 0.4.
	- Renamed Gruntfile, changed package.json dependencies.
- Added Add and Remove buttons in Host view.
	- Added method in deployman service, and tests.
	- Added e2e tests for the component.
- Added e2e tests runner.
	- Added child_process tasks to run successfully.
	- Other minor helpers.

--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "express": "*"
   },
   "devDependencies": {
+    "grunt": "~0.4.0",
     "grunt-contrib": "*",
     "grunt-livescript": "*",
-    "grunt-testacular": "*"
+    "grunt-testacular": "*",
+    "connect": "*"
   },
   "keywords": []
 }
